--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "cheerio": "^1.0.0",
     "node-cron": "^3.0.3",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "ws": "^8.18.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
